# Tether

./: .gitignore  README.md  engine.spec  main.py  package-lock.json  package.json  pyproject.toml  tether.spec
app/: __init__.py
app/audio/: recorder.py
app/stt/: __init__.py  spool.py  transcriber.py
app/tray/: __init__.py  hotkey_manager.py  tray_icon.py
core/: __init__.py  config.py  config_manager.py  llm_client.py  prompts.py
engine/: __main__.py  main.py
engine/ai/: __init__.py  ollama_client.py  prompts.py
engine/audio/: recorder.py
engine/stt/: __init__.py  spool.py  transcriber.py
engine/utils/: __init__.py  status.py
jobs/: __init__.py  notifier.py  scheduler.py  summarize.py  summarizer.py
scripts/: build.ps1  build.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/engine/: __main__.py  main.py
src-tauri/engine/ai/: __init__.py  ollama_client.py
src-tauri/engine/audio/: recorder.py
src-tauri/engine/stt/: __init__.py  spool.py
src-tauri/src/: lib.rs  process_manager.rs
src/components/: CommandPalette.tsx  RecordingWidget.tsx
src/components/ui/: command.tsx
tests/: test_engine_check_commands.py  test_phase0.py  test_phase1.py  test_phase1_hotkeys.py  test_phase1_init.py  test_phase1_ui.py  test_phase2.py  test_phase2_engine.py  test_phase3.py  test_phase4.py  test_portable_python.py
